public class Admin extends User {

    public Admin(String username, int id) {
        super(username,id);
    }

}
